--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/finder": "~2.2",
         "symfony/process": "~2.1",
         "seld/phar-utils": "~1.0",
-        "seld/cli-prompt": "~1.0"
+        "seld/cli-prompt": "~1.0",
+        "knplabs/github-api": "~1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
